# RustySlackResponse

./: .dockerignore  .env.copy  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml  docker-push.yml  docker-test.yml
Docker/: Dockerfile  docker-compose.simple.yml  docker-compose.traefik.yml
src/: lib.rs  main.rs
