[package]
name = "rusty-slack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack-morphism = { version = "1.12", features = ["hyper", "axum"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
anyhow = "1.0"
clap =  "4.4.8"
